Split out template create request
