# cloud/provision/types/create_template_request.go
@@ -1,0 +1,207 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package types
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"encoding/json"
+
+	strfmt "github.com/go-openapi/strfmt"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// CreateTemplateRequest create template request
+// swagger:model CreateTemplateRequest
+type CreateTemplateRequest struct {
+
+	// Template configuration
+	// Required: true
+	Configuration *TemplateConfiguration `json:"configuration"`
+
+	// Description of this template
+	// Required: true
+	// Min Length: 1
+	Description *string `json:"description"`
+
+	// Engine to use for provisioning (deprecated - always containership_kubernetes_engine)
+	// Required: true
+	// Enum: [containership_kubernetes_engine]
+	Engine *string `json:"engine"`
+
+	// Cloud provider name
+	// Required: true
+	// Enum: [digital_ocean azure google amazon_web_services packet]
+	ProviderName *string `json:"provider_name"`
+}
+
+// Validate validates this create template request
+func (m *CreateTemplateRequest) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateConfiguration(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateDescription(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateEngine(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateProviderName(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *CreateTemplateRequest) validateConfiguration(formats strfmt.Registry) error {
+
+	if err := validate.Required("configuration", "body", m.Configuration); err != nil {
+		return err
+	}
+
+	if m.Configuration != nil {
+		if err := m.Configuration.Validate(formats); err != nil {
+			if ve, ok := err.(*errors.Validation); ok {
+				return ve.ValidateName("configuration")
+			}
+			return err
+		}
+	}
+
+	return nil
+}
+
+func (m *CreateTemplateRequest) validateDescription(formats strfmt.Registry) error {
+
+	if err := validate.Required("description", "body", m.Description); err != nil {
+		return err
+	}
+
+	if err := validate.MinLength("description", "body", string(*m.Description), 1); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+var createTemplateRequestTypeEnginePropEnum []interface{}
+
+func init() {
+	var res []string
+	if err := json.Unmarshal([]byte(`["containership_kubernetes_engine"]`), &res); err != nil {
+		panic(err)
+	}
+	for _, v := range res {
+		createTemplateRequestTypeEnginePropEnum = append(createTemplateRequestTypeEnginePropEnum, v)
+	}
+}
+
+const (
+
+	// CreateTemplateRequestEngineContainershipKubernetesEngine captures enum value "containership_kubernetes_engine"
+	CreateTemplateRequestEngineContainershipKubernetesEngine string = "containership_kubernetes_engine"
+)
+
+// prop value enum
+func (m *CreateTemplateRequest) validateEngineEnum(path, location string, value string) error {
+	if err := validate.Enum(path, location, value, createTemplateRequestTypeEnginePropEnum); err != nil {
+		return err
+	}
+	return nil
+}
+
+func (m *CreateTemplateRequest) validateEngine(formats strfmt.Registry) error {
+
+	if err := validate.Required("engine", "body", m.Engine); err != nil {
+		return err
+	}
+
+	// value enum
+	if err := m.validateEngineEnum("engine", "body", *m.Engine); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+var createTemplateRequestTypeProviderNamePropEnum []interface{}
+
+func init() {
+	var res []string
+	if err := json.Unmarshal([]byte(`["digital_ocean","azure","google","amazon_web_services","packet"]`), &res); err != nil {
+		panic(err)
+	}
+	for _, v := range res {
+		createTemplateRequestTypeProviderNamePropEnum = append(createTemplateRequestTypeProviderNamePropEnum, v)
+	}
+}
+
+const (
+
+	// CreateTemplateRequestProviderNameDigitalOcean captures enum value "digital_ocean"
+	CreateTemplateRequestProviderNameDigitalOcean string = "digital_ocean"
+
+	// CreateTemplateRequestProviderNameAzure captures enum value "azure"
+	CreateTemplateRequestProviderNameAzure string = "azure"
+
+	// CreateTemplateRequestProviderNameGoogle captures enum value "google"
+	CreateTemplateRequestProviderNameGoogle string = "google"
+
+	// CreateTemplateRequestProviderNameAmazonWebServices captures enum value "amazon_web_services"
+	CreateTemplateRequestProviderNameAmazonWebServices string = "amazon_web_services"
+
+	// CreateTemplateRequestProviderNamePacket captures enum value "packet"
+	CreateTemplateRequestProviderNamePacket string = "packet"
+)
+
+// prop value enum
+func (m *CreateTemplateRequest) validateProviderNameEnum(path, location string, value string) error {
+	if err := validate.Enum(path, location, value, createTemplateRequestTypeProviderNamePropEnum); err != nil {
+		return err
+	}
+	return nil
+}
+
+func (m *CreateTemplateRequest) validateProviderName(formats strfmt.Registry) error {
+
+	if err := validate.Required("provider_name", "body", m.ProviderName); err != nil {
+		return err
+	}
+
+	// value enum
+	if err := m.validateProviderNameEnum("provider_name", "body", *m.ProviderName); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *CreateTemplateRequest) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *CreateTemplateRequest) UnmarshalBinary(b []byte) error {
+	var res CreateTemplateRequest
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
